6845426: non-static <clinit> method with no args is called during the class initialization process

Only call <clinit> with ACC_STATIC for classfiles with version > 50

Reviewed-by: acorn, dholmes, coleenp